Exemplo de Aplicação/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      port: 443
      protocol: TCP
  selector:
    app: nginx
