Exemplo de Aplicação/05-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    secretName: nginx-tls
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp('nginx.parnamirim.rn.gov.br')
      kind: Rule
      services:
        - name: nginx-service
          port: 443
